--- a/test/spec-runner.html
+++ b/test/spec-runner.html
@@ -1,10 +1,14 @@
 <html>
 <head>
-  <title></title>
+  <link rel='stylesheet' href='../bower_components/mocha/mocha.css'>
+  <title>WATERHOUSE – Spec Runner</title>
 </head>
 <body>
+  <div id="mocha"></div>
 
-  <script src="./browser.js"></script>
-
+  <script src='../bower_components/mocha/mocha.js'></script>
+  <script>mocha.setup('bdd');</script>
+  <script src='./browser-test.js'></script>
+  <script>mocha.run();</script>
 </body>
 </html>
